# cargo-plot

./: .gitignore  .rustfmt.toml  .x-do.toml  CHANGELOG.md  Cargo.toml  CargoPlot-0-1-5_2026Q1D070W11_Wed11Mar_005445717.md  CargoPlot-0-2-0-alpha-1_2026Q1D076W12_Tue17Mar_122807021.md  CargoPlot-0-2-0_2026Q1D080W12_Sat21Mar_033235486.md  CargoPlot-0-3-0-beta-1_R2026W16D3H10M42S30T00Q12COTS.md  CargoPlot-0-3-0-beta-2_R2026W16D4H20M01S21T14Q27COTS.md  CargoPlot-0-3-0-rc-1_R2026W16D2H07M56S25T17Q06_COTS.md  CargoPlot-0-3-0-rc-1_R2026W16D2H07M56S25T17Q06_SOTC.md  CargoPlot-2-0-0-alpha-1_2026Q1D076W12_Tue17Mar_115023586.md  DEV.md  GIT.txt  LICENSE-APACHE  LICENSE-MIT  README.md  d.md  f.md  lib.md  spec.md  u.md
.cargo/: config.toml
.github/workflows/: release.yml  rust.yml
CHANGELOG/: CargoPlot-0-1-5_R2026W11D3H00M54S45T43Q01.md  CargoPlot-0-1-5_R2026W11D3H00M54S45T43Q01COTS.md  CargoPlot-0-2-0_R2026W12D6H03M32S35T29Q09.md  CargoPlot-0-2-0_R2026W12D6H03M32S35T29Q09COTS.md  CargoPlot-0-3-0-beta-1_R2026W16D3H10M42S30T00Q12.md  CargoPlot-0-3-0-beta-1_R2026W16D3H10M42S30T00Q12COTS.md  CargoPlot-0-3-0-beta-2_R2026W16D4H20M01S21T14Q27.md  CargoPlot-0-3-0-beta-2_R2026W16D4H20M01S21T14Q27COTS.md  CargoPlot-0-3-0-beta-3_R2026W16D5H11M58S05T09Q45.md  CargoPlot-0-3-0-beta-3_R2026W16D5H11M58S05T09Q45COTS.md  CargoPlot-0-3-0-beta-4_R2026W16D6H12M56S48T32Q14.md  CargoPlot-0-3-0-beta-4_R2026W16D6H12M56S48T32Q14COTS-FILES.md  CargoPlot-0-3-0-beta-4_R2026W16D6H12M56S48T32Q14SOTC-INDEX.md  CargoPlot-0-3-0-beta-5_R2026W17D5H15M20S50T16Q19.md
doc/: code__2026Q1D069W11_Tue10Mar_140120471.md  doc__2026Q1D069W11_Tue10Mar_103406419.md  dokumentacja_cargo-plot__2026Q1D069W11_Tue10Mar_192833412.md  dokumentacja_cargo-plot__2026Q1D069W11_Tue10Mar_200332549.md  tree__2026Q1D069W11_Tue10Mar_125954538.md
examples/: demo.rs  fmt.rs  skaner.rs  toml.rs  try-step2.rs  try.rs
src/: addon.rs  api.rs  cli.rs  core.rs  execuctor.rs  execute.rs  i18n.rs  interfaces.rs  lib.rs  main.rs  output.rs  theme.rs  tui.rs
src/addon/: time_tag.rs
src/cli/: args.rs  dist.rs  doc.rs  mod.rs  stamp.rs  tree.rs  utils.rs
src/core/: by.rs  file_stats.rs  path_class.rs  path_getter.rs  path_matcher.rs  path_matcher_utils.rs  path_store.rs  path_treeview.rs  path_view.rs  patterns_expand.rs  save.rs
src/core/file_stats/: weight.rs
src/core/path_matcher/: matcher.rs  matcher_utils.rs  matchers.rs  sort.rs  stats.rs
src/core/path_store/: context.rs  store.rs
src/core/path_view/: grid.rs  list.rs  node.rs  tree.rs
src/execuctor/: for_many_patterns_tok.rs  for_one_pattern_raw.rs
src/interfaces/: cli.rs  gui.rs  tui.rs
src/interfaces/cli/: args.rs  engine.rs
src/interfaces/gui/: code.rs  i18n.rs  paths.rs  settings.rs  shared.rs
src/interfaces/tui/: i18n.rs  menu.rs  state.rs
src/interfaces/tui/menu/: enter.rs  job_add.rs  job_add_custom.rs  jobs_manager.rs  output_save.rs  paths_struct_style.rs
src/lib/: fn_copy_dist.rs  fn_datestamp.rs  fn_doc_gen.rs  fn_doc_id.rs  fn_doc_models.rs  fn_doc_write.rs  fn_files_blacklist.rs  fn_filespath.rs  fn_filestree.rs  fn_path_utils.rs  fn_pathtype.rs  fn_plotfiles.rs  fn_weight.rs  mod.rs
src/lib/command/: args.rs  help.rs  table.rs
src/lib/core/: help.rs  job_init.rs  job_presets.rs
src/lib/display/: anchored_paths_datum.rs  config.rs  fs_scanner.rs  job_spec.rs  path_canonical_ctx.rs  path_scan.rs  paths_patterns.rs  paths_result.rs  table_data.rs
src/lib/job/: config.rs  mod.rs  params.txt  step1.rs  step2.rs  step3.rs  step6.rs
src/lib/job/gens/: item_icon.rs  item_list.rs  mock_render.rs
src/lib/job/mapping/: diverse.rs  from_flags.rs  from_toml.rs  fs.rs  to_flags.rs  to_toml.rs
src/lib/job/pipeline/: step1.rs  step2.rs  step6.rs
src/lib/job/schema/: schema_job_constituents.rs  schema_job_orchestrator.rs  schema_job_transitional.rs
src/lib/job/view/: item_icon.rs  item_list.rs  mock_render.rs
src/lib/logic/: anchored_paths_datum.rs  c.rs  config_io.rs  config_model.rs  doc_engine.rs  doc_engine_multiple.rs  doc_markdown.rs  engine.rs  engine_multiple.rs  file_markdown_docs.rs  file_toml_config.rs  fs_anchored_datum.rs  fs_file.rs  fs_scanner.rs  io_config.rs  job_manifest.rs  lang_mapper.rs  path_canonical_ctx.rs  path_patterns.rs  path_scan.rs  path_sort.rs  paths_patterns.rs  paths_result.rs  paths_table.rs  specification.rs  table_data.rs  table_spec.rs  tag_time.rs
src/lib/logic/path/: anchored_paths_datum.rs  fs_scanner.rs  path_canonical_ctx.rs  path_context.rs  path_scan.rs  (+3 more)
src/lib/mapping/: engine_cli.rs  middleware_translate_to_job_raw_from_cli.rs  prepare_job_raw_toml_to_ready.rs
src/lib/pipelines/: step1.rs  step2.rs  step3.rs  step6.rs  step7.rs
src/lib/schema/: job_pipeline.rs  job_raw_cli.rs  job_raw_toml.rs  job_ready.rs
src/output/: generator.rs  save_code.rs  save_path.rs
src/output/generator/: config_backlist.rs
src/temp/: cli_old.rs  main_old.rs  tui_old.rs
src/theme/: for_path_list.rs  for_path_tree.rs
src/tui/: dist.rs  doc.rs  mod.rs  stamp.rs  tree.rs  utils.rs
