[package]
name = "cargo-plot"
version = "0.1.3"
authors = ["Jan Roman Cisowski „j-Cis”"]
edition = "2024"
rust-version = "1.94.0"
description = "Szwajcarski scyzoryk do wizualizacji struktury projektu i generowania raportów Markdown bezpośrednio z poziomu Cargo."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/j-Cis/cargo-plot"

# Maksymalnie 5 słów kluczowych (limit crates.io) - zoptymalizowane pod SEO
keywords = [
    "cargo", 
    "tree", 
    "markdown", 
    "filesystem",
    "documentation"
]

# Rozszerzone kategorie (tutaj również jest limit max 5, my mamy 4 mocne)
categories = [
    "development-tools::cargo-plugins", 
    "command-line-utilities",
    "command-line-interface",
    "text-processing",
]
resolver = "3"

[package.metadata.cargo]
edition = "2024"


[dependencies]
# Kluczowe dla logiki
chrono = "0.4.44"
walkdir = "2.5.0"
regex = "1.12.3"

# Kluczowe dla interfejsu (CLI/TUI)
# Wykorzystanie formatowania TOML v1.1.0 (wieloliniowe tabele z trailing comma)
clap = { 
    version = "4.5.60", 
    features = ["derive"], 
}
cliclack = "0.4.1"
colored = "3.1.1"

[lib]
name = "lib"
path = "src/lib/mod.rs"

# ==========================================
# Globalna konfiguracja lintów (Analiza kodu)
# ==========================================
# [lints.rust]
# Kategorycznie zabraniamy używania bloków `unsafe` w całym projekcie
# unsafe_code = "forbid"
# Ostrzegamy o nieużywanych importach, zmiennych i funkcjach
# unused = "warn"
#
# [lints.clippy]
# Włączamy surowsze reguły, ale jako ostrzeżenia (nie zepsują kompilacji)
# pedantic = "warn"
# Możemy tu też wyciszyć globalnie to, co nas irytuje (opcjonalnie):
# too_many_arguments = "allow"