[package]
name = "cargo-plot"
version = "0.3.0-beta.1"
authors = ["Jan Roman Cisowski „j-Cis”"]
edition = "2024"
rust-version = "1.94.0"
description = "Szwajcarski scyzoryk do wizualizacji struktury projektu i generowania dokumentacji bezpośrednio z poziomu Cargo."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/j-Cis/cargo-plot"

keywords = [ "cargo",  "tree",  "markdown",  "filesystem", "documentation"]
categories = [ "development-tools::cargo-plugins",  "command-line-utilities", "command-line-interface", "text-processing",]
resolver = "3"

include = [
    "src/**/*",
    "examples/**/*",
    "Cargo.toml",
    "Cargo.lock",
    "README.md",
    "CHANGELOG.md",
    "LICENSE-APACHE",
    "LICENSE-MIT"
]

[package.metadata.cargo]
edition = "2024"


[lib]
name = "plot"        
path = "src/api.rs" 


[dependencies]
anyhow = "1.0.102"
chrono = "0.4.44"
clap = { version = "4.6.0", features = ["derive", "cargo", "unicode", "wrap_help", "string", "env", "unstable-doc", "unstable-markdown", "unstable-styles"] }
colored = "3.1.1"
console = "0.16.3"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
walkdir = "2.5.0"

# cliclack = "0.5.0"
# ctrlc = "3.5.2"
# shlex = "1.3.0"
# eframe = "0.34.1"
# rfd = "0.17.2"


# ==========================================
# Globalna konfiguracja lintów (Analiza kodu)
# ==========================================
[lints.rust]
# Kategorycznie zabraniamy używania bloków `unsafe` w całym projekcie
unsafe_code = "forbid"
# Ostrzegamy o nieużywanych importach, zmiennych i funkcjach
# unused = "warn"
#
[lints.clippy]
# Włączamy surowsze reguły, ale jako ostrzeżenia (nie zepsują kompilacji)
# pedantic = "warn"
# Możemy tu też wyciszyć globalnie to, co nas irytuje (opcjonalnie):
too_many_arguments = "allow"